--- a/IoTAssignment/app/src/main/res/layout/activity_smart_lighting.xml
+++ b/IoTAssignment/app/src/main/res/layout/activity_smart_lighting.xml
@@ -45,7 +45,7 @@
         android:id="@+id/tv_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:hint="Hello World!"
         android:textSize="20sp"
         android:textColor="@color/black"
         android:layout_centerInParent="true" />
@@ -93,11 +93,37 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_text"
-        android:layout_marginStart="30dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="-222dp"
         android:text="Auto Mode"
         android:textColor="#253A4B"
         android:textSize="33sp"
         android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/onButton2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tv_text"
+        android:layout_marginStart="180dp"
+        android:layout_marginTop="-221dp"
+        android:text="ON"
+        android:textColor="@color/black"
+        android:textSize="15sp"
+        app:backgroundTint="@color/white"
+        app:cornerRadius="22dp" />
+
+    <Button
+        android:id="@+id/offButton2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tv_text"
+        android:layout_marginStart="270dp"
+        android:layout_marginTop="-221dp"
+        android:text="OFF"
+        android:textColor="@color/black"
+        android:textSize="15sp"
+        app:backgroundTint="@color/white"
+        app:cornerRadius="22dp" />
 
 </RelativeLayout>
