--- a/IoTAssignment/app/src/main/res/layout/activity_smart_lighting.xml
+++ b/IoTAssignment/app/src/main/res/layout/activity_smart_lighting.xml
@@ -58,9 +58,9 @@
         android:layout_marginStart="130dp"
         android:layout_marginTop="158dp"
         android:text="ON"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="15sp"
-        app:backgroundTint="@color/white"
+        app:backgroundTint="#07D955"
         app:cornerRadius="22dp" />
 
     <Button
@@ -71,9 +71,9 @@
         android:layout_marginStart="240dp"
         android:layout_marginTop="158dp"
         android:text="OFF"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="15sp"
-        app:backgroundTint="@color/white"
+        app:backgroundTint="#F23B5F"
         app:cornerRadius="22dp" />
 
     <TextView
@@ -108,9 +108,9 @@
         android:layout_marginStart="180dp"
         android:layout_marginTop="-221dp"
         android:text="ON"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="15sp"
-        app:backgroundTint="@color/white"
+        app:backgroundTint="#07D955"
         app:cornerRadius="22dp" />
 
     <Button
@@ -118,12 +118,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_text"
-        android:layout_marginStart="270dp"
+        android:layout_marginStart="275dp"
         android:layout_marginTop="-221dp"
         android:text="OFF"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="15sp"
-        app:backgroundTint="@color/white"
+        app:backgroundTint="#F23B5F"
         app:cornerRadius="22dp" />
 
 </RelativeLayout>
