--- a/IoTAssignment/app/src/main/res/layout/activity_temperature_humidity.xml
+++ b/IoTAssignment/app/src/main/res/layout/activity_temperature_humidity.xml
@@ -82,6 +82,7 @@
         android:layout_width="257dp"
         android:layout_height="31dp"
         android:textSize="24sp"
+        android:text = "@string/temperature_output"
         app:layout_constraintBottom_toTopOf="@+id/Humidity5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.363"
@@ -110,5 +111,34 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/weather6"
         app:layout_constraintVertical_bias="0.4" />
+
+    <ProgressBar
+        android:id="@+id/loader"
+        android:layout_width="212dp"
+        android:layout_height="289dp"
+        android:layout_centerInParent="true"
+        android:layout_marginEnd="411dp"
+        android:layout_marginBottom="731dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/errorText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_marginEnd="411dp"
+        android:layout_marginBottom="731dp"
+        android:text="Something went wrong"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
