--- a/IoTAssignment/app/src/main/res/layout/activity_soil_humidity.xml
+++ b/IoTAssignment/app/src/main/res/layout/activity_soil_humidity.xml
@@ -6,8 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".SoilHumidity">
 
-
-
     <ImageButton
         android:id="@+id/backButton"
         android:layout_width="wrap_content"
@@ -34,59 +32,65 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/plantImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/soilHumidityLevel"
+        android:id="@+id/soil_status"
+        android:layout_width="184dp"
+        android:layout_height="171dp"
+        android:layout_below="@+id/stockIn"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="100dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/stockIn"
-        app:srcCompat="@drawable/watering_plants" />
+        tools:srcCompat="@drawable/watering_plants"
+        android:contentDescription="@string/todo" />
 
     <TextView
-        android:id="@+id/soilHumidityLevel"
-        android:layout_width="271dp"
-        android:layout_height="40dp"
-        android:text="Soil Humidity Level(%):"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/soilStatus"
+        android:id="@+id/humidity_level"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/stockIn"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="64dp"
+        android:text="@string/soil_humid"
+        android:textColor="#253A4B"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/plantImage" />
+        app:layout_constraintTop_toBottomOf="@+id/soil_status" />
 
     <TextView
-        android:id="@+id/soilStatus"
-        android:layout_width="325dp"
-        android:layout_height="69dp"
-        android:text="plant is healthy"
-        android:textSize="28sp"
-        app:layout_constraintBottom_toTopOf="@+id/water_plants_button"
+        android:id="@+id/humid_percent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/stockIn"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="443dp"
+        android:layout_marginEnd="24dp"
+        android:text=""
+        android:textColor="#253A4B"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.949"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/soilHumidityLevel" />
+        app:layout_constraintTop_toBottomOf="@+id/soil_status"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/water_plants_button"
-        android:layout_width="150dp"
-        android:layout_height="50dp"
-        android:backgroundTint="#07D955"
-        android:text="water plants"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/stop_water_button"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/soilStatus" />
-
-    <Button
-        android:id="@+id/stop_water_button"
-        android:layout_width="150dp"
-        android:layout_height="50dp"
-        android:backgroundTint="#F23B5F"
-        android:drawableTint="#FFFFFF"
-        android:text="Stop"
+    <TextView
+        android:id="@+id/tv_msg2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/humid_percent"
+        android:layout_centerInParent="true"
+        android:text="@string/plant_is_healthy"
+        android:textColor="#253A4B"
+        android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/water_plants_button"
-        app:layout_constraintTop_toBottomOf="@+id/soilStatus" />
+        app:layout_constraintHorizontal_bias="0.547"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/humid_percent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
